<resources>
    <string name="app_name">Airless Breathalyzer</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="feedbacktitle">Make a new Profile</string>
    <string name="sextype">Select a Sex</string>
    <string name="Sex0">Please Select a Sex</string>
    <string name="Sex1">Male</string>
    <string name="Sex2">Female</string>
    <string name="Sex3">Prefer not to Respond</string>
    <string name="title_activity_pick_profile">Pick a Profile</string>
    <string name="filename">profiles.txt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_math_test">mathTest</string>
    <string name="title_activity_reflex_test">reflexTest</string>
    <string name="title_activity_short_term_memory_test_start">shortTermMemoryTestStart</string>
    <string name="action_settings">Settings</string>
    <string name="memoryTestInstructions"><u><b><i>Memorize These Words in Order</i></b></u></string>
    <string name="Word1">airplane</string>
    <string name="Word2">zebra</string>
    <string name="Word3">trumpet</string>
    <string name="Word4">cellphone</string>
    <string name="Word5">computer</string>
    <string name="Word6">blanket</string>
    <string name="Word7">pillow</string>
    <string name="Word8">taxi</string>
    <string name="Word9">picture</string>
    <string name="Word10">sofa</string>
    <string name="Word11">island</string>
    <string name="Word12">window</string>
    <string name="Word13">salad</string>
    <string name="Word14">machine</string>
    <string name="Word15">jacket</string>
    <string name="Word16">apple</string>
    <string name="Word17">finger</string>
    <string name="Word18">kitchen</string>
    <string name="Word19">sandwich</string>
    <string name="Word20">pencil</string>
    <string name="word1prompt">First Word</string>
    <string name="word2prompt">Second Word</string>
    <string name="word3prompt">Third Word</string>
    <string name="word4prompt">Fourth Word</string>
    <string name="word5prompt">Fifth Word</string>
    <string name="title_activity_short_term_memory_test_finish">short_term_memory_test_finish</string>
    <string name="profile">profile</string>
    <string name="submitMem">Submit Guess</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="home">Back to Home</string>
    <string name="prereflex"><u><b><i>Tap the Drinks!</i></b></u></string>
    <string name="mathTitle"><u><b><i>Solve the Problem!</i></b></u></string>
    <string name="finishMemTest"><u><b><i>Enter the Words In Order</i></b></u></string>
    <string name="resultText1"><u><b><i>You got a: </i></b></u></string>
    <string name="resultText2"><u><b><i> B.A.C.</i></b></u></string>
    <string name="prebal"><u><b><i>Hold the Phone Flat and Walk Forward!</i></b></u></string>
</resources>
