<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_short_term_memory_test_finish"
    tools:context="com.aabb.airlessbreathalyzer.shortTermMemoryTestFinish">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/memTestFinishTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/word1prompt"
        android:id="@+id/word1"
        android:layout_below="@+id/memTestFinishTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/word2prompt"
        android:id="@+id/word2"
        android:layout_below="@+id/word1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/word3prompt"
        android:id="@+id/word3"
        android:layout_below="@+id/word2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/word4prompt"
        android:id="@+id/word4"
        android:layout_below="@+id/word3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/word5prompt"
        android:id="@+id/word5"
        android:layout_below="@+id/word4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
